clusters/area87/homelab/pihole/pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - name: web
          containerPort: 80
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /etc/pihole
        - name: dnsmasq
          mountPath: /etc/dnsmasq.d
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: pihole-config-pvc
      - name: dnsmasq
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: homelab
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - port: 80
    targetPort: 80
    name: web
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: pihole-optiplex.area87.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole
            port:
              number: 80
